[workspace]
members = [
  "http-content-digest",
  "http-msgsign", 
  "http-msgsign-draft",
]

resolver = "3"

[workspace.dependencies]
http = "^1"
http-body = "^1"
http-body-util = "^0.1"
sfv = "^0.13.0"
bytes = "^1"
base64 = "^0.22"
thiserror = "^2"

[workspace.package]
authors = ["RechellaTek <reirokusanami.rdh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
