[package]
name = "http-msgsign-draft"
version = "0.3.0"
description = "Add functionality for draft-cavage-http-signatures-12 to http."
repository = { workspace = true }
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
http-content-digest = { path = "../http-content-digest", version = "^0.1" }

thiserror = { workspace = true }

indexmap = "^2"

[dev-dependencies]
tokio = { version = "^1", default-features = false, features = ["macros", "rt-multi-thread"] }
sha2 = "0.10.8"
rsa = "0.9.8"
rand = { version = "^0.8" }
