[package]
name = "http-msgsign"
version = "0.1.0"
description = "Provide RFC9421 HTTP Message Signature functionality to `http` crate."
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
http = { workspace = true }
http-body = { workspace = true }
http-content-digest = { path = "../http-content-digest", version = "^0.1" }

sfv = { workspace = true }

base64 = { workspace = true }
thiserror = { workspace = true }

indexmap = "^2"


[dev-dependencies]
bytes = "^1"
http-body-util = "0.1.3"

sha2 = "^0.10"
rsa = "0.9.8"
rand = { version = "^0.8" }

tokio = { version = "^1", default-features = false, features = ["macros", "rt-multi-thread"] }